{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 61,
  "lineage": "f78559c8-c575-70c4-0706-9025e099ae0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-094e04639bbdc2afe",
            "domain": "vpc",
            "id": "eipalloc-0cddfc2c5f33aaf1f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0817b166f83bec36d",
            "private_dns": "ip-10-0-2-118.us-east-2.compute.internal",
            "private_ip": "10.0.2.118",
            "public_dns": "ec2-3-138-71-204.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.71.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e18eb80d287854e9",
            "domain": "vpc",
            "id": "eipalloc-0db5df5f83165de2e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ce41a7dab28ea56a",
            "private_dns": "ip-10-0-3-207.us-east-2.compute.internal",
            "private_ip": "10.0.3.207",
            "public_dns": "ec2-3-140-128-66.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.128.66",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "Web_instance_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:235218384118:loadbalancer/foobar-terraform-elb",
            "availability_zones": [
              "us-east-2a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "foobar-terraform-elb-533465508.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "foobar-terraform-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0c64709737d1aea2b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-2:235218384118:certificate/1e5ecc2a-0c10-4ba2-8fd6-9d8aea797168"
              },
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "foobar-terraform-elb",
            "security_groups": [
              "sg-0a1c3fe0fd6539f10"
            ],
            "source_security_group": "235218384118/default",
            "source_security_group_id": "sg-0a1c3fe0fd6539f10",
            "subnets": [
              "subnet-0419903ea501c9ae5"
            ],
            "tags": {
              "Name": "Web_instance_elb"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_instance.web_instance",
            "aws_security_group.web_sg",
            "aws_subnet.Web_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:235218384118:instance/i-0697dd8002966c4ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0697dd8002966c4ed",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Devops_assignment",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5184935a316c54e",
            "private_dns": "ip-10-0-3-89.us-east-2.compute.internal",
            "private_ip": "10.0.3.89",
            "public_ip": "3.133.92.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03d4b3ac77d63baca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07c7ed901cf0c89cb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073d5754aaee1c065",
            "tags": {
              "Name": "Application Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07c7ed901cf0c89cb"
            ]
          },
          "dependencies": [
            "aws_security_group.application_sg",
            "aws_subnet.Application_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:235218384118:instance/i-0333f0db5142a25a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0333f0db5142a25a6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Devops_assignment",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd150555a2f0e1be",
            "private_dns": "ip-10-0-1-175.us-east-2.compute.internal",
            "private_ip": "10.0.1.175",
            "public_ip": "18.224.39.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bd48d34d455bc8b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a1f99c8f415f1f24"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e855384fec86d640",
            "tags": {
              "Name": "Bastion Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a1f99c8f415f1f24"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.Bastion_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:235218384118:instance/i-0c64709737d1aea2b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c64709737d1aea2b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Devops_assignment",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06921cc6b5d91ebdf",
            "private_dns": "ip-10-0-2-108.us-east-2.compute.internal",
            "private_ip": "10.0.2.108",
            "public_ip": "3.137.217.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05b362cad6c214806",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0692e354b3faa07bd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0419903ea501c9ae5",
            "tags": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0692e354b3faa07bd"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.Web_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235218384118:internet-gateway/igw-0a20e1b094bd98d4c",
            "id": "igw-0a20e1b094bd98d4c",
            "owner_id": "235218384118",
            "tags": {
              "Name": "gateway for public"
            },
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cddfc2c5f33aaf1f",
            "id": "nat-07ee4692a37586f4e",
            "network_interface_id": "eni-0817b166f83bec36d",
            "private_ip": "10.0.2.118",
            "public_ip": "3.138.71.204",
            "subnet_id": "subnet-0419903ea501c9ae5"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip1",
            "aws_subnet.Web_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db5df5f83165de2e",
            "id": "nat-08d2a4190a4ab6a3d",
            "network_interface_id": "eni-0ce41a7dab28ea56a",
            "private_ip": "10.0.3.207",
            "public_ip": "3.140.128.66",
            "subnet_id": "subnet-073d5754aaee1c065"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip2",
            "aws_subnet.Application_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nated1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-081e703d7161e89ab",
            "owner_id": "235218384118",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ee4692a37586f4e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table 1 for NAT-ed subnet"
            },
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip1",
            "aws_nat_gateway.gw2",
            "aws_subnet.Web_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nated3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dfa70606ca9a92c6",
            "owner_id": "235218384118",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d2a4190a4ab6a3d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table 1 for NAT-ed subnet"
            },
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip2",
            "aws_nat_gateway.gw3",
            "aws_subnet.Application_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03133fb1383abfdff",
            "owner_id": "235218384118",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a20e1b094bd98d4c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IG_route_table"
            },
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0679910a2b1e35a65",
            "route_table_id": "rtb-03133fb1383abfdff",
            "subnet_id": "subnet-0e855384fec86d640"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.route1",
            "aws_subnet.Bastion_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nated2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d47b1fc69434901",
            "route_table_id": "rtb-081e703d7161e89ab",
            "subnet_id": "subnet-0419903ea501c9ae5"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip1",
            "aws_nat_gateway.gw2",
            "aws_route_table.nated1",
            "aws_subnet.Web_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nated4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbce1deb616fe5f3",
            "route_table_id": "rtb-0dfa70606ca9a92c6",
            "subnet_id": "subnet-073d5754aaee1c065"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip2",
            "aws_nat_gateway.gw3",
            "aws_route_table.nated3",
            "aws_subnet.Application_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235218384118:security-group/sg-07c7ed901cf0c89cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-07c7ed901cf0c89cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application-instance-security-group",
            "name_prefix": "",
            "owner_id": "235218384118",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235218384118:security-group/sg-0a1f99c8f415f1f24",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0a1f99c8f415f1f24",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-security-group",
            "name_prefix": "",
            "owner_id": "235218384118",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235218384118:security-group/sg-0692e354b3faa07bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0692e354b3faa07bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-security-group",
            "name_prefix": "",
            "owner_id": "235218384118",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Application_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235218384118:subnet/subnet-073d5754aaee1c065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-073d5754aaee1c065",
            "map_public_ip_on_launch": false,
            "owner_id": "235218384118",
            "tags": {
              "Name": "Application subnet"
            },
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235218384118:subnet/subnet-0e855384fec86d640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e855384fec86d640",
            "map_public_ip_on_launch": false,
            "owner_id": "235218384118",
            "tags": {
              "Name": "Bastion subnet"
            },
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235218384118:subnet/subnet-0419903ea501c9ae5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0419903ea501c9ae5",
            "map_public_ip_on_launch": false,
            "owner_id": "235218384118",
            "tags": {
              "Name": "Web subnet"
            },
            "vpc_id": "vpc-0fb4de4088266baf8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:235218384118:vpc/vpc-0fb4de4088266baf8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c517f59be608f1eb",
            "default_route_table_id": "rtb-0abb5cad83e524511",
            "default_security_group_id": "sg-0a1c3fe0fd6539f10",
            "dhcp_options_id": "dopt-a4b036cf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fb4de4088266baf8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0abb5cad83e524511",
            "owner_id": "235218384118",
            "tags": {
              "Name": "terraform-aws-vpc"
            }
          }
        }
      ]
    }
  ]
}